--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'bootstrap_4.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{ parent() }}Home{% endblock %}
 
 {% block content %}
 
