--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent() }}Home{% endblock %}
 
 {% block content %}
-
+    {% block menuhaut %}{% endblock %}
     <main role="main" class="flex-shrink-0">
         <div class="container">
             <h1 class="mt-5">Home</h1>
