--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,13 +2,20 @@
 
 {% block title %}{{ parent() }}Home{% endblock %}
 
-{% block content %}
-    {% block menuhaut %}{% endblock %}
-    <main role="main" class="flex-shrink-0">
-        <div class="container">
-            <h1 class="mt-5">Home</h1>
-            <hr>
 
-        </div>
-    </main>
-{% endblock %}
+    {% block menuhaut %}
+    {% for sections in sectionsMenuHaut %}
+        <li class="nav-item">
+            <a class="nav-link" href="#">{{ sections.sectiontitle }}</a>
+        </li>
+    {% endfor %}
+    {% endblock %}
+    {% block content %}
+        <main role="main" class="flex-shrink-0">
+            <div class="container">
+                <h1 class="mt-5">Home</h1>
+                <hr>
+
+            </div>
+        </main>
+    {% endblock %}
