--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,7 +21,7 @@
                         <h5>{% for section in item.sectionIdsection %}
                                 {{ section.sectiontitle }} |
                             {% endfor %}</h5>
-                        <p>{{ item.messagetext }}</p>
+                        <p>{{ item.messagetext|u.truncate(50, '...', false) }}</p>
                         <h6>
                             Le {{ item.getMessagedate|date("d/m/Y à H:i") }}
                              par {{ item.userIduser.userlogin }} </h6>
