--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
     {% block menuhaut %}
         {% for sections in sectionsMenuHaut %}
             <li class="nav-item">
-                <a class="nav-link" href="#">{{ sections.sectiontitle }}</a>
+                <a class="nav-link" href="{{ path("section",{"slug":sections.sectionslug}) }}">{{ sections.sectiontitle }}</a>
             </li>
         {% endfor %}
     {% endblock %}
