--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,12 +15,13 @@
                     {% for item in messages %}
                         <h3>{{ item.messagetitle }}</h3>
                         <h5>{% for section in item.sectionIdsection %}
-                                {{ section.sectiontitle }} |
+                                <a
+                                href="{{ path("section",{"slug":section.sectionslug}) }}">{{ section.sectiontitle }}</a>{% if not loop.last  %} | {% endif %}
                             {% endfor %}</h5>
                         <p>{{ item.messagetext|u.truncate(50, '...', false) }}</p>
                         <h6>
                             Le {{ item.getMessagedate|date("d/m/Y à H:i") }}
-                             par {{ item.userIduser.userlogin }} </h6>
+                            par {{ item.userIduser.userlogin }} </h6>
                         <hr>
                     {% endfor %}
                 {% endblock %}
