--- a/templates/home/message.html.twig
+++ b/templates/home/message.html.twig
@@ -1,6 +1,6 @@
 {% extends 'bootstrap_4.html.twig' %}
 
-{% block title %}{{ parent() }}Home{% endblock %}
+{% block title %}{{ parent() }}{{ message.messagetitle }}{% endblock %}
 
 
     {% block menuhaut %}
@@ -12,19 +12,18 @@
                 <h1 class="mt-5">Home</h1>
                 <hr>
                 {% block subcontent %}
-                    {% for item in messages %}
-                        <h3>{{ item.messagetitle }}</h3>
-                        <h5>{% for section in item.sectionIdsection %}
+
+                        <h3>{{ message.messagetitle }}</h3>
+                        <h5>{% for section in message.sectionIdsection %}
                                 <a
                                 href="{{ path("section",{"slug":section.sectionslug}) }}">{{ section.sectiontitle }}</a>{% if not loop.last  %} | {% endif %}
                             {% endfor %}</h5>
-                        <p>{{ item.messagetext|u.truncate(50, '...', false) }}</p>
-                        <p><a href="{{ path("article",{"slug":item.messageslug}) }}">Lire la suite</a></p>
+                        <p>{{ message.messagetext }}</p>
                         <h6>
-                            Le {{ item.getMessagedate|date("d/m/Y à H:i") }}
-                            par {{ item.userIduser.userlogin }} </h6>
+                            Le {{ message.getMessagedate|date("d/m/Y à H:i") }}
+                            par {{ message.userIduser.userlogin }} </h6>
                         <hr>
-                    {% endfor %}
+
                 {% endblock %}
             </div>
         </main>
