--- a/templates/home/_menu.html.twig
+++ b/templates/home/_menu.html.twig
@@ -3,3 +3,13 @@
         <a class="nav-link" href="{{ path("section",{"slug":sections.sectionslug}) }}">{{ sections.sectiontitle }}</a>
     </li>
 {% endfor %}
+<ul class="navbar-nav mr-sm-4">
+    <li class="nav-item">
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+        {% else %}
+            <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+        {% endif %}
+
+    </li>
+</ul>
