--- a/templates/home/_menu.html.twig
+++ b/templates/home/_menu.html.twig
@@ -4,12 +4,19 @@
     </li>
 {% endfor %}
 <ul class="navbar-nav mr-sm-4">
-    <li class="nav-item">
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
-        {% else %}
-            <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
-        {% endif %}
 
-    </li>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <li class="nav-item">
+            <span class="nav-link active disabled" >Bienvenue {{ app.user.userlogin }}</span>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+        </li>
+    {% endif %}
+
+
 </ul>
